--- a/src/scss/theme/_sidebar.scss
+++ b/src/scss/theme/_sidebar.scss
@@ -15,7 +15,7 @@
             position: absolute;
             right: 0;
             top: 0;
-            z-index: 100;
+            z-index: 10;
             background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%,rgba(black, .20) 100%);
         }
     }
